<resources>
    <string name="facebook_app_id">1906784466255821</string>
    <string name="app_name">SimpleMyDot</string>
    <string name="random_dot">RANDOM DOT</string>
    <string name="clear_dot">CLEAR DOT</string>
    <string name="hold_for_edit">Hold for Edit</string>
    <string name="open_activity">Open Activity</string>
    <string name="share">Share</string>
    <string name="backtomain">BacktoMain</string>
    <string name="textview">TextView</string>
    <string name="undo">UNDO</string>
    <string name="share_all_content">Share All Content</string>
</resources>
